unpackaged/main/default/objects/Sample__c/Sample__c.object-meta.xml
<CustomObject>
    <label>Sample</label>
    <nameField>
        <displayFormat>SN-{00000}</displayFormat>
        <label>Sample Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Samples</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>