unpackaged/main/default/objects/Sample__c/fields/Barrel__c.field-meta.xml
<CustomField>
    <fullName>Barrel__c</fullName>
    <label>Barrel</label>
    <referenceTo>Barrel__c</referenceTo>
    <relationshipLabel>Samples</relationshipLabel>
    <relationshipName>Samples</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>