unpackaged/main/default/objects/Sample__c/fields/Barrel_Number__c.field-meta.xml
<CustomField>
    <fullName>Barrel_Number__c</fullName>
    <formula>Barrel__r.Barrel_Number__c</formula>
    <label>Barrel Number</label>
    <type>Text</type>
</CustomField>