unpackaged/main/default/objects/Sample__c/fields/Barreled_Date__c.field-meta.xml
<CustomField>
    <fullName>Barreled_Date__c</fullName>
    <formula>Barrel__r.Barreled_Date__c</formula>
    <label>Barreled Date</label>
    <type>Date</type>
</CustomField>