unpackaged/main/default/objects/Sample__c/fields/Lot_Code__c.field-meta.xml
<CustomField>
    <fullName>Lot_Code__c</fullName>
    <label>Lot Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>