unpackaged/main/default/objects/Sample__c/fields/Sample_Kit__c.field-meta.xml
<CustomField>
    <fullName>Sample_Kit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sample Kit</label>
    <referenceTo>Sample_Kit__c</referenceTo>
    <relationshipLabel>Samples</relationshipLabel>
    <relationshipName>Samples</relationshipName>
    <type>Lookup</type>
</CustomField>