unpackaged/main/default/objects/Sample__c/fields/Sample_Selected__c.field-meta.xml
<CustomField>
    <fullName>Sample_Selected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sample Selected</label>
    <type>Checkbox</type>
</CustomField>